overall alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
-.container{
-    margin: 0 10%;
+.containerManual{
+    padding: 0 10%;
+
 }
